Sending chagnes as chunks